# foxglove

./: .gitignore  CMakeLists.txt  README.md
assets/materials/: Scene_-_Root  T_Rat_02_D  container  default  rat  二重  发  神之眼  肌
assets/models/: Diona  rat  rat2
assets/shaders/: default.fsh  default.vsh  lol.fsh  lol.vsh  lol2.vsh
foxglove/: CMakeLists.txt  engine.cpp  engine.hpp
foxglove/asset/: asset.hpp  asset_handler.hpp  asset_manager.hpp  handler_base.hpp
foxglove/asset/handlers/: handler_base.hpp  material_handler.cpp  material_handler.hpp  model_handler.cpp  model_handler.hpp  shader_handler.cpp  shader_handler.hpp  texture_handler.cpp  texture_handler.hpp
foxglove/core/: application.cpp  application.hpp  event_bus.hpp  events.hpp  foxglove_main.cpp  input.hpp  window.cpp  window.hpp
foxglove/ecs/: component_array.hpp  ecs.hpp  events.hpp  render_system.hpp  world.cpp  world.hpp
foxglove/game/components/: camera.hpp  model_renderer.hpp  transform.hpp
foxglove/game/systems/: camera_control_system.cpp  camera_control_system.hpp  render_system.cpp  render_system.hpp
foxglove/math/: 3d_stuff.hpp  matrix.hpp  vector.hpp
foxglove/renderer/: draw_list.hpp  gl_assert.hpp  hardware_buffer.hpp  hardware_texture.cpp  hardware_texture.hpp  hardware_vertex_data.cpp  hardware_vertex_data.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_params.hpp  structs.hpp  texture.cpp  texture.hpp  vertex_attribute.hpp
foxglove/utils/: assert.hpp  common.hpp  filesystem.cpp  filesystem.hpp  non_copyable.hpp  singleton.hpp
model_importer/: CMakeLists.txt  fxg_model.hpp  importer.cpp
testapp/: CMakeLists.txt  testapp.cpp  testapp.hpp
